--- a/bio.html
+++ b/bio.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JUL L'OVNI</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./assets/cursorrr.ico" />
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         <img class="hand left" src="./assets/img/MAIN-GAUCHE.svg"/>
         <img class="hand right" src="./assets/img/MAIN-DROITE.svg"/>
     </div>
-    
+
     <a href="./index.html" style="text-decoration: none;">
         <div class="headband-bio">
             <h2>AFIN DE CAPTER L’OVNI VOICI UN DECRYPTAGE DU LANGAGE DE JUL</h2>
