--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./assets/cursorrr.ico" />
 </head>
 
-<body>
+<body style="background-color: #5F13FF;">
 
     <div class="coloredOverlay"></div>
 
@@ -19,68 +19,71 @@
         <img class="hand right" src="./assets/img/MAIN-DROITE.svg"/>
     </div>
 
-    <a href="./index.html" style="text-decoration: none;">
-        <div class="headband-bio">
-            <h2>AFIN DE CAPTER L’OVNI VOICI UN DECRYPTAGE DU LANGAGE DE JUL</h2>
-        </div>
-    </a>
-
-    <div class="container">
-        <div class="idPicture">
-            <img src="./assets/img/bio.png">
-        </div>
-        <div class="text">
-            <div class="row">
-                <div class="date">
-                    <span style="color:#5F13FF !important">1983</span>
-                </div>
-                <div class="biography">
-                    <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
-                </div>
+    <div class="main_container">
+        <a href="./index.html" style="text-decoration: none;">
+            <div class="headband-bio">
+                <h2>AFIN DE CAPTER L’OVNI VOICI UN DECRYPTAGE DU LANGAGE DE JUL</h2>
             </div>
-            <div class="row">
-                <div class="date">
-                    <span>1990</span>
-                </div>
-                <div class="biography">
-                    <span>IL NAIT LE 14 JANVIER 1990 A MARSEILLE</span>
-                </div>
+        </a>
+    
+        <div class="container">
+            <div class="idPicture">
+                <img src="./assets/img/bio.png">
             </div>
-            <div class="row">
-                <div class="date">
-                    <span>1990</span>
+            <div class="text">
+                <div class="row">
+                    <div class="date">
+                        <span style="color:#5F13FF !important">1983</span>
+                    </div>
+                    <div class="biography">
+                        <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
+                    </div>
                 </div>
-                <div class="biography">
-                    <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
+                <div class="row">
+                    <div class="date">
+                        <span>1990</span>
+                    </div>
+                    <div class="biography">
+                        <span>IL NAIT LE 14 JANVIER 1990 A MARSEILLE</span>
+                    </div>
                 </div>
+                <div class="row">
+                    <div class="date">
+                        <span>1990</span>
+                    </div>
+                    <div class="biography">
+                        <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="date">
+                        <span>1990</span>
+                    </div>
+                    <div class="biography">
+                        <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="date">
+                        <span>1990</span>
+                    </div>
+                    <div class="biography">
+                        <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="date">
+                        <span>1990</span>
+                    </div>
+                    <div class="biography">
+                        <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
+                    </div>
+                </div>
+    
             </div>
-            <div class="row">
-                <div class="date">
-                    <span>1990</span>
-                </div>
-                <div class="biography">
-                    <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="date">
-                    <span>1990</span>
-                </div>
-                <div class="biography">
-                    <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="date">
-                    <span>1990</span>
-                </div>
-                <div class="biography">
-                    <span>JULIEN MARI DIT JUL, EST UN RAPPEUR, CHANTEUR ET AUTEUR-COMPOSITEUR-INTERPRÈTE FRANÇAIS.IL EST LE PLUS GROS VENDEUR DE L’HISTOIRE DU RAP FRANCAIS.</span>
-                </div>
-            </div>
-
         </div>
     </div>
+
 
 
 
